# quickbooks-mcp-server

./: .dockerignore  .gitignore  DISCLAIMER.md  Dockerfile  README.md  admin_portal.py  bootstrap.py  crypto.py  database.py  docker-compose.yml  env_template.txt  main_quickbooks_mcp.py  pyproject.toml  quickbooks_interaction.py  rules.json  scheduler_engine.py
docs/: eula.html  index.html  privacy.html
static/: admin.js  chat.js  style.css
templates/: acknowledge.html  base.html  change_password.html  chat.html  dashboard.html  disclaimer.html  flagged.html  login.html  rules.html  rules_form.html  scheduler.html  settings.html
